add comment and subscriptions

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -17,6 +17,7 @@ ru:
       user:
         email: 'Email'
         name: 'Имя'
+        avatar: 'Аватарка'
         password: 'Пароль'
         password_confirmation: 'Подтверждение пароля'
       event:
