--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -11,6 +11,7 @@ ru:
     models:
       user: 'Пользователь'
       event: 'Событие'
+      photo: 'Фотография'
 
     # Перевод атрибутов моделей
     attributes:
@@ -25,6 +26,14 @@ ru:
         address: 'Место проведения'
         datetime: 'Дата и время'
         description: 'Описание'
+      comment:
+        user_name: 'Ваше имя'
+        body: 'Комментарий'
+      subscription: 
+        user_name: 'Ваше имя'
+        user_email: 'Ваш email'
+      photo:
+        photo: 'Фотография'
     errors:
       messages:
         record_invalid: 'Возникли ошибки: %{errors}'
@@ -48,6 +57,12 @@ ru:
       created: 'Вы подписаны на это событие'
       destroyed: 'Участник отписан'
       error: 'Подписка/отписка не сработала'
+    photos:
+      error: 'Что-то не так с фоткой'
+      created: 'Вы добавили фотографию к событию'
+      destroyed: 'Вы удалили фотку'
+
+
   
   app:
     name: 'Шашлыки'
